# OSIRIS-POC

./: .env.example  .gitignore  README.md  indexer.py  lsp_spike.py  main.py  osiris_v2.py  parser.py  pyproject.toml
poc2_v1/: osiris_async_v1.py  osiris_sync_v1.py  osiris_v1.py
poc_v1/: pre-poc_osiris.py  pre-poc_osiris_v2.py  pre-poc_osiris_v3.py
utils/: ast_locator.py
